--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ main {
 }
 
 h1 {
-  font-family: "Sedgwick Ave", cursive;
+  font-family: "Pinyon Script", cursive;
   text-align: center;
   font-weight: 800;
   font-size: 28px;
