--- a/src/style.css
+++ b/src/style.css
@@ -116,6 +116,15 @@ footer {
   font-size: 13px;
   margin: 30px auto;
 }
+@media (max-width: 960px) {
+  h1 {
+    font-size: 36px;
+  }
+
+  .instructions {
+    font-size: 8px;
+  }
+}
 
 .generating {
   animation: blink-animation 1s steps(5, start) infinite;
