--- a/src/style.css
+++ b/src/style.css
@@ -29,14 +29,22 @@ main {
 }
 
 h1 {
-  font-family: "Pinyon Script", cursive;
+  font-family: "Great Vibes", cursive;
   text-align: center;
   font-weight: 800;
   font-size: 48px;
   line-height: 1.5;
-  color: #e1c58d;
+  color: #b8a598;
 }
 
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  font-weight: 800;
+  font-size: 32px;
+
+  color: #e1c58d;
+}
 .image-grid {
   display: flex;
   justify-content: center;
